fix: Responsive Slider reset btn align issue, Header Types uneven space, Font unit control line-height issue

--- a/inc/assets/css/ast-builder-customizer.css
+++ b/inc/assets/css/ast-builder-customizer.css
@@ -202,6 +202,10 @@
 
 /*------------------------------------------------------------------------------------------------------------------*/
 
+#customize-control-astra-settings-header-sticky-link {
+    margin-top: 0;
+}
+
 /*controls.css*/
 .customize-control-astra_builder_control {	
     border: 0 !important;
@@ -814,7 +818,7 @@ li#customize-control-astra-settings-header-desktop-items, li#customize-control-a
     bottom: auto;
 }
 
-.ahfb-builder-group .ahfb-builder-area:nth-child(4) .ahfb-builder-add-item .components-popover.ahfb-popover-add-builder, .ahfb-builder-group .ahfb-builder-area:nth-child(5) .ahfb-builder-add-item .components-popover.ahfb-popover-add-builder {
+.ahfb-builder-group .ahfb-builder-area:nth-child(3) .ahfb-builder-add-item.center-on-left .components-popover.ahfb-popover-add-builder, .ahfb-builder-group .ahfb-builder-area:nth-child(4) .ahfb-builder-add-item .components-popover.ahfb-popover-add-builder, .ahfb-builder-group .ahfb-builder-area:nth-child(5) .ahfb-builder-add-item .components-popover.ahfb-popover-add-builder {
     left: 0 !important;
 }
 
