--- a/inc/customizer/custom-controls/responsive/responsive.scss
+++ b/inc/customizer/custom-controls/responsive/responsive.scss
@@ -53,6 +53,7 @@
     display: block;
     width: 17%;
     float: none;
+    line-height: 1em;
   }
   .ast-non-reponsive {
     &.ast-responsive-input {
